fix(menu): Changes the z-index of the footer so that is also hidden when the mobile menu is active

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 20rem;
     background-color: white;
-    z-index: 1000;
+    z-index: 10;
 
     display: flex;
     flex-direction: column;
